# bhoomi-vision

./: .gitignore  CNAME  README.md  TODO.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: container-scan-navigation.yml  navigation-replica.yml  pages.yml  resource-allocation.yml  template-cleanup.yml  vision-pheno.yml
docs/: README.md  TODO.md  _config.yml  index.html
docs/_data/: authors.yml  navigation.yml
docs/_includes/: footer.html
docs/_posts/chariot/: 2022-11-13-deploy.md
docs/_posts/conference/case/: 2022-11-14-case-2023.md
docs/_posts/conference/icceme/: 2022-12-03-icceme-2023.md
docs/_posts/conference/icra/: 2022-11-13-icra-2024.md
docs/_posts/conference/iros/: 2022-11-13-iros-2023.md
docs/_posts/conference/smops/: 2022-10-23-smops-2023-extra.md  2022-10-23-smops-2023.md  29.1.0.md  29.1.2 Vision Abstract.md
docs/_posts/conference/spaceapps/: 2022-10-01-spaceapps-2022.md  29.1.1 Habitat Guidelines.md
docs/_posts/conference/sseo/: 2022-10-09-sseo-2023.md
docs/_posts/dev/: 2022-12-04-ci-cd-guide.md  2022-12-04-docker-guide.md  2022-12-04-java-guide.md  2022-12-04-python-guide.md
docs/_posts/greenhouse/: 2022-10-30-pre-process.md  2022-11-09-seed-to-tree.md
docs/_posts/habitat/: 2022-10-30-build.md
docs/_posts/humanoid/: 2022-11-09-mind.md
docs/_posts/patent/: 2022-11-07-design.md  2022-11-07-patent-application.md
docs/_posts/readme/: 2022-10-02-sprint-logs.md
docs/_posts/research/: 2022-10-09-habitat.md  2022-10-09-hydroponics.md  2022-10-09-module-gardener.md  2022-10-09-module-spray.md  2022-10-09-server.md  2022-10-09-study-group-sg-3-27.md  2022-10-15-astro-pi.md  2022-10-27-production.md
docs/_posts/seeker/: 2022-11-09-2032.md  2022-11-09-50-year-storm.md
docs/_posts/site/: 2022-10-02-privacy.md
docs/_posts/sponsors/: 2022-10-09-spaceapps-2022.md
docs/_posts/weather/: 2022-12-04-weather.md
docs/assets/docs/: abstractsmops2023.doc  berlin2023abstract.doc  pdc2023abstract.doc
docs/book/: index.md
docs/data/: habitat.json  index.md
docs/dev/: index.md
docs/garuda/: index.md
docs/greenhouse/: index.md
docs/milestone/: index.md
docs/research/: index.md
docs/sponsors/: index.md
docs/tags/: index.md
docs/vaikunta/: index.md
src/adugemane/: HELP.md  pom.xml
src/book/seeker/: README.md  isbn.md.txt
src/book/seeker/seeker/: seeker.kcb
src/book/seeker/seeker/EPUB/: seeker.epub
src/book/seeker/seeker/KPF/: seeker.kpf
src/book/seeker/seeker/resources/: book.kdf
src/gaganyatri/: CMakeLists.txt  README.md  StopWatch.cpp  main.cu
src/gaganyatri/resources/: data.json  schedule.json
src/gaganyatri/resources/data/: polygons_2.txt  polygons_300.txt  polygons_50.txt  polygons_indoor.txt
src/garuda/allocation/: .gitignore  Dockerfile  Makefile  README.md  build.gradle  docker-compose-springboot-postgis.yml  pom.xml
src/garuda/navigation/: CMakeLists.txt  Dockerfile  Makefile  README.md  build.cmake  build_with_docker.cmake
src/garuda/navigation/src/: main.cpp
src/nandi/: README.md
src/solutions/data_management/: .gitignore  settings.gradle
src/solutions/print_items/: build.gradle  settings.gradle
src/solutions/scheduler/: build.gradle
src/vision/: Dockerfile  FrameHeightList.txt  README.md  TODO.md  Test_Cases.xlsx  dedup.py  get_growth_height.py  requirements.txt  testcase_scenario.md  video_to_frame.py
(+21 files in other folders)
